[package]
name = "psbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argh = "0.1"
bip39 = "2"
bitcoin = { version = "0.31", features = ["rand"] }
env_logger = "0.10"
hex = "0.4"
hex-literal = "0.4"
log = "0.4"
miniscript = "11.0"
rand = { version = "0.8", features = ["std_rng", "small_rng"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", default-features = false, features = ["macros"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }

ord-rs = { git = "ssh://git@github.com/bitfinity-network/ord-rs.git" }
